# ai-quant

./: .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260419_0001_initial_schema.py  20260419_0002_add_trades_and_snapshots.py  (+8 more)
backend/app/: __init__.py  exceptions.py  main.py  runtime_events.py
backend/app/db/: models.py  (+2 more)
backend/ml_trading_bot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/models/: model_crypto_fold1.lgbm  model_crypto_fold10.lgbm  model_crypto_fold100.lgbm  model_crypto_fold101.lgbm  model_crypto_fold102.lgbm  model_crypto_fold103.lgbm  model_crypto_fold104.lgbm  model_crypto_fold105.lgbm  model_crypto_fold106.lgbm  model_crypto_fold107.lgbm  model_crypto_fold108.lgbm  model_crypto_fold109.lgbm  model_crypto_fold11.lgbm  model_crypto_fold110.lgbm  model_crypto_fold111.lgbm  model_crypto_fold112.lgbm  model_crypto_fold113.lgbm  model_crypto_fold114.lgbm  model_crypto_fold115.lgbm  model_crypto_fold116.lgbm  model_crypto_fold117.lgbm  model_crypto_fold118.lgbm  model_crypto_fold119.lgbm  model_crypto_fold12.lgbm  model_crypto_fold120.lgbm  model_crypto_fold121.lgbm  model_crypto_fold122.lgbm  model_crypto_fold123.lgbm  model_crypto_fold124.lgbm  model_crypto_fold125.lgbm  model_crypto_fold126.lgbm  model_crypto_fold127.lgbm  model_crypto_fold128.lgbm  model_crypto_fold129.lgbm  model_crypto_fold13.lgbm  model_crypto_fold130.lgbm  model_crypto_fold131.lgbm  model_crypto_fold132.lgbm  model_crypto_fold133.lgbm  model_crypto_fold134.lgbm  (+96 more)
(+245 files in other folders)
